--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/PacoVu/rev_ai.git"
   },
   "keywords": [
-    "speech recogition"
+    "speech recogition",
     "transcription",
     "text to speech"
   ],
