--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-**/.DS_Store
-.env
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependency directories
 node_modules/
+# Optional npm cache directory
+.npm
+.env
