--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ logs
 npm-debug.log*
 
 # Dependency directories
-node_modules/*
+node_modules/
+node_modules/dotenv/
 # Optional npm cache directory
 .npm
 .env
